// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`iOS BpkSectionListHeader dark mode should render correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgb(1, 9, 19)",
      "paddingHorizontal": 16,
      "paddingVertical": 4,
    }
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(255, 255, 255)",
          "fontFamily": "System",
          "fontSize": 16,
          "fontWeight": "400",
          "letterSpacing": 0.12,
          "textAlign": "left",
        },
        Object {
          "fontWeight": "700",
        },
        Object {
          "color": "rgb(255, 255, 255)",
        },
      ]
    }
  >
    Section header
  </Text>
</View>
`;

exports[`iOS BpkSectionListHeader light mode should render correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgb(239, 241, 242)",
      "paddingHorizontal": 16,
      "paddingVertical": 4,
    }
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(22, 22, 22)",
          "fontFamily": "System",
          "fontSize": 16,
          "fontWeight": "400",
          "letterSpacing": 0.12,
          "textAlign": "left",
        },
        Object {
          "fontWeight": "700",
        },
        Object {
          "color": "rgb(22, 22, 22)",
        },
      ]
    }
  >
    Section header
  </Text>
</View>
`;
